Fix: Extra margin on the layout

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ body {
   background-color: var(--color4);
   font-family: 'Times New Roman', Times, serif;
   font-size: 1.5rem;
+  margin: 0;
 }
 
 main {
